<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical">
    <!-- padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->

    <LinearLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div_bg"
        android:orientation="vertical"
        android:padding="15dip">
        <!-- 账号 -->
        <EditText
            android:id="@+id/phone_user_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/corner_edit"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:maxLength="11" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/verify_code_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/corner_edit"
                android:hint="@string/verify_number"
                android:inputType="number"
                android:singleLine="true" />

            <TextView
                android:id="@+id/acquire_verify"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:background="@drawable/blue_button"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/acquire_verify_code" />
        </LinearLayout>

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/corner_edit"
            android:hint="@string/secrect"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/confirm_password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/corner_edit"
            android:hint="@string/confirm_secrect"
            android:inputType="textPassword"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dip"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check_user_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_protocol" />

        <TextView
            android:id="@+id/protocol_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protocol_content"
            android:textColor="#888"
            android:textColorLink="#FF0066CC" />
    </LinearLayout>
    <!-- 登录button -->
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dip"
        android:background="@drawable/blue_button"
        android:text="@string/register_button" />

</LinearLayout>