<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical">
    <!-- padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->

    <LinearLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:orientation="vertical"
        android:padding="15dip">
        <!-- 账号 -->
        <EditText
            android:id="@+id/phone_user_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/corner_edit"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:maxLength="11" />


            <EditText
                android:id="@+id/oldpasswprd_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/corner_edit"
                android:hint="@string/old_password"
                android:singleLine="true" />



        <EditText
            android:id="@+id/newpassword_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/corner_edit"
            android:inputType="textPassword"
            android:hint="@string/newsecrect"
            android:singleLine="true" />
        <EditText
            android:id="@+id/confirm_password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/confirmnew_secrect"
            android:background="@drawable/corner_edit"
            android:inputType="textPassword"
            android:singleLine="true" />

    </LinearLayout>
    <!-- 登录button -->
    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dip"
        android:background="@drawable/blue_button"
        android:text="@string/submit_button" />
</LinearLayout>