<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical">
    <!-- padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div_bg"
        android:minHeight="150dp"
        android:padding="15dip">
        <!-- 账号 -->
        <TextView
            android:id="@+id/login_user_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/company_name" />

        <EditText
            android:id="@+id/company_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_user_input"
            android:layout_marginTop="5dp"
            android:background="@drawable/corner_edit" />


        <!-- 登录button -->
        <Button
            android:id="@+id/signin_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/company_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/blue_button"
            android:text="@string/login_label_signin" />
    </RelativeLayout>

    <TextView
        android:id="@+id/genetal_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="15dip"
        android:text="@string/genetal_login"
        android:textColor="#888"
        android:textColorLink="#FF0066CC" />

</LinearLayout>